# soccer_eda_ml

./: config.py  pyproject.toml  sports.ipynb  utils.py
notebooks/: match_predict.ipynb  soccer_eda.ipynb
